test_programs/compile_failure/noirc_frontend_tests_break_and_continue_outside_loop/src/main.nr

        unconstrained fn main() {
            continue;
            break;
        }
    